turtleart.lessons.turtleart.Main.DiskFourth.scala.error
Source:3: error: '(' expected but identifier found.
	(for i <- 0 to 90){
             ^Source:8: error: illegal start of simple expression
}
^